--- a/documentation/Mod_Template/manifest.json
+++ b/documentation/Mod_Template/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "MOD NAME GOES HERE",
-    "description": "MOD DESCRIPTION GOES HERE",
+    "name": "That01Panda's Mod",
+    "description": "That01Panda's mod",
     "developer":
     {
-        "name": "DEVELOPER NAME GOES HERE"
+        "name": "That01Panda"
     },
     "icons":
     {
