--- a/documentation/Mod_Template/manifest.json
+++ b/documentation/Mod_Template/manifest.json
@@ -170,7 +170,7 @@
                 },
                 "light":
                 {
-                    "image": "wallpaper/video.webm",
+                    "image": "wallpaper/opening door.jfif",
                     "first_frame": "wallpaper/first_frame.jpeg",
                     "text_color": "#FFFFFF",
                     "text_shadow": "#0B000E"
