--- a/documentation/Mod_Template/manifest.json
+++ b/documentation/Mod_Template/manifest.json
@@ -66,7 +66,7 @@
                 ],
                 "TAB_CLOSE":
                 [
-                    "sound/close_tab.mp3"
+                    "sound/bonk-sound-effect.mp3"
                 ],
                 "TAB_INSERT":
                 [
