--- a/documentation/Mod_Template/manifest.json
+++ b/documentation/Mod_Template/manifest.json
@@ -7,7 +7,7 @@
     },
     "icons":
     {
-        "512": "icon_512.png"
+        "512": "steve - Copy.png"
     },
     "manifest_version": 3,
     "mod":
