--- a/documentation/Mod_Template/manifest.json
+++ b/documentation/Mod_Template/manifest.json
@@ -164,7 +164,7 @@
             {
                 "dark":
                 {   
-                    "image": "wallpaper/statue.png",
+                    "image": "wallpaper/Ei6FedqUwAAcxPk.png",
                     "first_frame": "wallpaper/steve.png",
                     "text_color": "#FFFFFF",
                     "text_shadow": "#757575"
